<resources>
    <string name="app_name">S-SMART</string>
    <string name="app_name_full">Site Safety Management Audit and Review Tool</string>
    <string name="action_settings">Settings</string>
    <string name="change_loc">Change Branch &amp; Location</string>
    <string name="title_activity_paint">Paint</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="enter_a_note">Enter a note…</string>
    <string name="audit">Audit</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_report">Report</string>

    <string name="hello_world">Hello world!</string>
    <string name="save_survey">SAVE</string>
    <string name="logout">logout</string>
    <string name="Logout">Logout</string>
    <string name="enter_emp_id">Enter EmployeeId</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_pwd">Enter Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER ACCOUNT</string>
    <string name="yes">YES</string>
    <string name="na">N/A</string>
    <string name="no">NO</string>
    <string name="go">Go for Audit</string>

    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>

    <string name="title_activity_survey_history">Audit History</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="preview">PREVIEW</string>
    <string name="send_report">SEND REPORT</string>
    <string name="mark_as_compltd">MARK AS COMPLETED</string>

    <string-array name="previewEntries">
        <item>Preview PDF</item>
        <item>Preview DOC</item>
        <item>Preview EXCEL</item>
    </string-array>
    <string name="updated_on">Updated On:</string>
    <string name="created_on">Created On:</string>
    <string name="ok">OK</string>
    <!--<string name="incomplete_msg">Please Complete the survey!!</string>-->
    <string name="title_activity_second">Second</string>
    <string name="survey_details">Audit Details</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="pls_enter_emp_id">Please enter employee id</string>
    <string name="pls_enter_emp_name">Please enter name</string>
    <string name="invalid_emp_id">Invalid employee id</string>


    <string name="title_activity_screen">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">HSE</string>
    <string name="slide_1_desc">Security in your hands</string>

    <string name="slide_2_title">E-Auditing application</string>
    <string name="slide_2_desc">Provides easy and user friendly auditing framework</string>

    <string name="slide_3_title">Generates Audit reports in any format </string>
    <string name="slide_3_desc">Allows you to generate report instantly on a single click.</string>

    <string name="slide_4_title">Image capturing</string>
    <string name="slide_4_desc">Capture images and generate report.</string>

    <string name="slide_5_title">Send reports anytime, anywhere</string>
    <string name="slide_5_desc">Send generated report through E-mail.</string>

    <string name="slide_6_title">Image highlight Editor.</string>
    <string name="slide_6_desc">Edit captured image and highlight the fault. </string>

    <string name="slide_7_title">Audit History</string>
    <string name="slide_7_desc">View Audit history on single click</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="generate_report">Generate Report</string>
    <string name="preview_report">Preview Report</string>
    <string name="history">History</string>
    <string name="title_activity_registration">Registration Account</string>
    <string name="reg_error">Please fill fields</string>
    <string name="auth_error">Wrong password.</string>
    <string name="register_account">REGISTER YOUR ACCOUNT</string>
    <string name="title_activity_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_branch">Branches</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_branch">Enter branch name*</string>
    <string name="add_branch">ADD BRANCH</string>
    <string name="enter_location">Enter location*</string>
    <string name="add_location">ADD LOCATION</string>
    <string name="select_branch">Select Branch</string>
    <string name="select_location">Select Location</string>

    <string name="branch_success_msg">Branch added successfully</string>
    <string name="branch_failure_msg">Branch adding failed</string>
    <string name="title_activity_locations">Locations</string>
    <string name="select_location_act_label">Choose audit Branch &amp; Location</string>
    <string name="config_branch_loc"><u>Configure Branch &amp; Location</u></string>

    <string name="location_success_msg">Location added successfully</string>
    <string name="location_failure_msg">Location adding failed</string>

    <string name="survey_check_msg">Please provide audit name</string>

    <string name="loc_select_msg">Please select Branch &amp; Location</string>

    <string name="help">Help</string>

    <string name="permission_error">Storage Permission not granted. Application wont work properly if you haven\'t provide this permission.</string>
    <string name="building_external">Building-External</string>
    <string name="building_internal">Building-Internal</string>
    <string name="process_practices"><![CDATA[Processes & Practices]]></string>
    <string name="enter_caption">Enter caption…</string>
    <string name="current_pass">Enter current password</string>
    <string name="new_pass">Enter new password</string>
    <string name="confirm_pass">Confirm new password</string>
    <string name="submit">Submit</string>
    <string name="scorecard">Scorecard</string>
    <string name="no_location_detected">Location not detected</string>
    <string name="new_audit">New Audit</string>
    <string name="pass_protected">Password Protected</string>
    <string name="secure">Secure your audit from unauthorized access</string>
    <string name="customize">Customize it</string>
    <string name="settings">Change settings and add more locations and branches</string>
    <string name="safety_score_range">Safety Score Range</string>
    <string name="scorecard_desc">Generate and evaluate audit report with a scorecard</string>


    <string name="logout_preference">LogoutPreference</string>
    <string name="logout_preference_first_time">first_time</string>
    <string name="logout_key">KEY_LOGOUT</string>
    <string name="logout_value">logout</string>
    <string name="login_value">login</string>
    <string name="Graph">Graph</string>


</resources>
