<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo512x512" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/expandable_background"
        android:textSize="40sp"
        android:textStyle="bold"

        />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_brush"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/etEmpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pwd"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnLogin"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/login" />

</LinearLayout>
