<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.ilp.tcs.sitesafety.fragment.FragmentAddLocation">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_branch"
            android:textSize="@dimen/text_14" />

        <Spinner
            android:id="@+id/spn_branches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtinput_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_medium">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_location"
            android:inputType="textCapSentences" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_add_location"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/add_location" />

</LinearLayout>
